# cerebro-osrs

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260327_0038_create_accounts_table.py  20260327_0055_create_account_snapshots_table.py  20260327_0115_create_profiles_table.py  20260327_0135_create_goals_table.py  20260327_0155_create_chat_tables.py  20260327_1625_create_account_progress_table.py  20260327_1715_expand_account_progress_state.py  20260327_1835_add_users_and_sessions.py  20260327_1945_scope_core_data_to_users.py  20260327_2105_scope_account_uniqueness_to_user.py  20260327_2115_reset_profile_id_sequence.py  20260327_2245_add_password_hash_to_users.py  20260329_2115_add_chat_session_state.py  20260415_0001_add_companion_sync_tables.py
backend/app/: main.py
backend/app/api/: api_router.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/integrations/: openai_responses.py  osrs_hiscores.py  osrs_ingestion.py
backend/app/models/: __init__.py  account.py  account_progress.py  account_snapshot.py  chat.py  companion_connection.py  companion_link_session.py  goal.py  profile.py  (+2 more)
backend/tests/: conftest.py  test_account_progress.py  test_accounts.py  test_auth.py  test_chat.py  test_companion.py  test_gear.py  test_goals.py  test_knowledge_answering.py  test_knowledge_base.py  test_osrs_hiscores.py  test_profile.py  test_quests.py  test_recommendations.py  test_skills.py  test_teleports.py
(+139 files in other folders)
